adding header, modified CMakeLists.txt, but have to change the package name later cuz Local workspace has a package with same name

--- a/src/lidar_processing/package.xml
+++ b/src/lidar_processing/package.xml
@@ -62,6 +62,7 @@
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>message_generation</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
