--- a/src/sb_lidar_process/package.xml
+++ b/src/sb_lidar_process/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lidar_processing</name>
+  <name>sb_lidar_process</name>
   <version>0.0.0</version>
-  <description>The lidar_processing package</description>
+  <description>The sb_lidar_process package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="autonav@todo.todo">autonav</maintainer>
+  <maintainer email="subpark@student.42berlin.de">autonav</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/lidar_processing</url> -->
+  <!-- <url type="website">http://wiki.ros.org/sb_lidar_process</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
