--- a/src/sb_lidar_process/CMakeLists.txt
+++ b/src/sb_lidar_process/CMakeLists.txt
@@ -135,7 +135,10 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/main.cpp src/roi.cpp)
+add_executable(${PROJECT_NAME}_node src/main.cpp
+                src/roi.cpp
+                src/voxel_grid.cpp
+              )
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
